# angoor

./: .gitignore  AGENTS.md  Keybinding_Hints.md  README.md  pyproject.toml
src/angoor/: __init__.py  __main__.py  app.py  backend.py
tests/: conftest.py  test_backend.py  test_regression.py  test_snapshot.py
tests/__snapshots__/test_snapshot/: test_snapshot_after_navigation.raw  test_snapshot_cell_viewer_open.raw  test_snapshot_column_search_open.raw  test_snapshot_header_mode.raw  test_snapshot_initial_table_view.raw  test_snapshot_last_row.raw  test_snapshot_parquet_view.raw  test_snapshot_row_search_open.raw
tests/data/: _make_parquet.py  sample.csv  sample.parquet  sample.tsv
