[project]
name = "angoor"
version = "0.1.0"
description = "VIM keybindings tabular data viewer (CSV & Parquet) built with Textual + DuckDB"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.86.0",
    "duckdb>=1.1.0",
]

[project.scripts]
angoor = "angoor.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/angoor"]

[dependency-groups]
dev = []